--- a/mailexpress-ui/src/main/webapp/view.xhtml
+++ b/mailexpress-ui/src/main/webapp/view.xhtml
@@ -6,10 +6,10 @@
       xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
       xmlns:h="http://java.sun.com/jsf/html" xmlns:msgdata="http://java.sun.com/jsf/composite/msgdata">
 <ui:composition>
-    <a4j:outputPanel id="msg_view" rendered="#{not empty messageViewController.message}">
-        <msgdata:msgSummary message="#{messageViewController.message}"/>
-        <rich:panel header="Selected Rows:">
-            <h:outputText value="#{messageViewController.message.body}"/>
+    <a4j:outputPanel id="msgView" rendered="#{not empty messageListData.selectedItem}">
+        <msgdata:msgSummary message="#{messageListData.selectedItem}"/>
+        <rich:panel>
+            <h:outputText value="#{messageListData.selectedItem.body}"/>
         </rich:panel>
     </a4j:outputPanel>
 </ui:composition>
