--- a/mailexpress-ui/src/main/webapp/form/folder.xhtml
+++ b/mailexpress-ui/src/main/webapp/form/folder.xhtml
@@ -4,13 +4,12 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
 <ui:composition>
-     <h:form id="newMessage" enctype="">
-         <h:outputText value="#{msg['subject']}"/>
-         <h:inputText value="#{messageFormData.subject}"/>
-         <rich:editor value="#{messageFormData.body}"/>
-         <rich:fileUpload acceptedTypes="" immediateUpload="true"/>
-     </h:form>
+    <h:form id="folderForm">
+        <h:outputLabel value="#{msg['folder_name']}" for="folderName"/>
+        <h:inputText id="folderName" value="#{folderFormData.name}"/>
+        <h:commandButton action="#{folderController.saveFolder}" value="#{msg['save']}"/>
+    </h:form>
 </ui:composition>
 </html>
