--- a/mailexpress-ui/src/main/webapp/menu.xhtml
+++ b/mailexpress-ui/src/main/webapp/menu.xhtml
@@ -12,16 +12,52 @@
                 <h:outputText value="#{msg['folders_header']}"/>
             </f:facet>
             <rich:tree id="tree" nodeType="#{node.type}" var="node" value="#{folderController.rootNodes}"
-                       toggleType="client" selectionChangeListener="#{folderController.selectionListener}" iconClass="folder-icon">
-                <rich:treeNode type="folder" iconLeaf="#{resource['img:folder_leaf.png']}"
-                               iconCollapsed="#{resource['img:folder.png']}"
-                               iconExpanded="#{resource['img:folder.png']}"
+                       toggleType="client" selectionChangeListener="#{folderController.selectionListener}"
+                       iconClass="folder-icon">
+                <rich:treeNode type="folder"
+                               iconLeaf="#{node.system ? resource[node.iconPath] : resource['img:folder_leaf.png']}"
+                               iconCollapsed="#{node.system ? resource[node.iconPath] : resource['img:folder.png']}"
+                               iconExpanded="#{node.system ? resource[node.iconPath] : resource['img:folder.png']}"
                                expanded="true" iconClass="folder-icon">
                     <h:outputText value="#{node}"/>
-                    <a4j:ajax execute="@form" event="click" listener="#{messageListData.selectionListener}" render="app-title msg_list msg_view"/>
+                    <a4j:ajax execute="@form" event="click" listener="#{messageListData.selectionListener}"
+                              render="app-title msgList msgView"/>
                 </rich:treeNode>
             </rich:tree>
+
+            <rich:contextMenu target="tree" mode="ajax">
+                <rich:menuItem label="#{msg['new_folder']}" render="popupContent" oncomplete="#{rich:component('folderPopup')}.show()"
+                               mode="ajax" icon="#{resource['img:new_folder.png']}"/>
+
+                <rich:menuItem label="#{msg['rename']}" render="popupContent" oncomplete="#{rich:component('folderPopup')}.show()"
+                               mode="ajax" icon="#{resource['img:rename.png']}"/>
+
+                <rich:menuItem label="#{msg['delete']}" render="popupContent" oncomplete="#{rich:component('folderPopup')}.show()"
+                               mode="ajax" icon="#{resource['img:delete.png']}"/>
+            </rich:contextMenu>
         </rich:panel>
     </h:form>
+
+    <rich:popupPanel id="folderPopup" modal="true" autosized="true" resizeable="false">
+        <f:facet name="header">
+            <h:outputText value="#{msg['new_folder']}"/>
+        </f:facet>
+        <f:facet name="controls">
+            <h:outputLink value="#" onclick="#{rich:component('folderPopup')}.hide(); return false;">
+                x
+            </h:outputLink>
+        </f:facet>
+        <h:panelGroup id="popupContent">
+            <ui:insert name="form">
+                <ui:include src="form/folder.xhtml"/>
+            </ui:insert>
+        </h:panelGroup>
+    </rich:popupPanel>
+
+    <rich:popupPanel id="confirmFolderPane" autosized="true">
+        #{msg['delete_folder_confirm_question']}
+        <a4j:commandButton value="#{msg['yes']}" onclick="remove(); return false;" />
+        <a4j:commandButton value="#{msg['no']}" onclick="#{rich:component('confirmFolderPane')}.hide(); return false;" />
+    </rich:popupPanel>
 </ui:composition>
 </html>
