--- a/mailexpress-ui/src/main/webapp/index.xhtml
+++ b/mailexpress-ui/src/main/webapp/index.xhtml
@@ -82,7 +82,7 @@
 </h:head>
 <h:body>
     <div class="outer-north container">
-        <a4j:outputPanel id="app-title" styleClass="b center">
+        <a4j:outputPanel id="appTitle" styleClass="b center">
             <h:outputText value="#{folderController.selectedFolderName} - "
                           rendered="#{folderController.selectedFolderName != null}"/> Mail Express
         </a4j:outputPanel>
