--- a/mailexpress-ui/src/main/webapp/view.xhtml
+++ b/mailexpress-ui/src/main/webapp/view.xhtml
@@ -4,11 +4,10 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-      xmlns:h="http://java.sun.com/jsf/html" xmlns:msgdata="http://java.sun.com/jsf/composite/msgdata">
+      xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition>
     <a4j:outputPanel id="msgView">
-        <msgdata:msgSummary message="#{messageListData.selectedItem}"
-                            rendered="#{not empty messageListData.selectedItem}"/>
+
         <rich:panel rendered="#{not empty messageListData.selectedItem}" bodyClass="msg-view">
             <h:outputText value="#{messageListData.selectedItem.body}" escape="false"/>
         </rich:panel>
