--- a/mailexpress-ui/src/main/webapp/menu.xhtml
+++ b/mailexpress-ui/src/main/webapp/menu.xhtml
@@ -21,7 +21,7 @@
                                expanded="true" iconClass="folder-icon">
                     <h:outputText value="#{node}"/>
                     <a4j:ajax execute="@form" event="click" listener="#{messageListData.selectionListener}"
-                              render="appTitle msgList msgView"/>
+                              render="appTitle msgList msgView folderTools"/>
                 </rich:treeNode>
             </rich:tree>
 
