--- a/mailexpress-ui/src/main/webapp/list.xhtml
+++ b/mailexpress-ui/src/main/webapp/list.xhtml
@@ -16,9 +16,15 @@
                                         noDataLabel="#{msg['no_messages']}" styleClass="message-list">
                     <a4j:ajax execute="@form" event="selectionchange" listener="#{messageListData.selectionListener}"
                               render="msgView msgTools"/>
+                    <rich:column id="attachFlag" width="40px">
+                        <f:facet name="header">
+                            <h:graphicImage library="img" name="attachment_small.png" title="#{msg['has_attachment']}"/>
+                        </f:facet>
+                        <h:graphicImage library="img" name="attachment_small.png" rendered="#{message.withAttachment}"/>
+                    </rich:column>
                     <rich:column id="unread" width="40px">
                         <f:facet name="header">
-                            <h:graphicImage library="img" name="eye.png"/>
+                            <h:graphicImage library="img" name="eye.png" title="#{msg['is_read']}"/>
                         </f:facet>
                         <a4j:commandButton
                                 image="#{message.unread ? resource['img:green_dot.png'] : resource['img:gray_dot.png']}"
